; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-pca953x.c_pca953x_gpio_direction_input.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-pca953x.c_pca953x_gpio_direction_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.pca953x_chip = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@BANK_SZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32)* @pca953x_gpio_direction_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pca953x_gpio_direction_input(%struct.gpio_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.gpio_chip*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pca953x_chip*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.gpio_chip* %0, %struct.gpio_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load %struct.gpio_chip*, %struct.gpio_chip** %3, align 8
  %10 = call %struct.pca953x_chip* @gpiochip_get_data(%struct.gpio_chip* %9)
  store %struct.pca953x_chip* %10, %struct.pca953x_chip** %5, align 8
  %11 = load %struct.pca953x_chip*, %struct.pca953x_chip** %5, align 8
  %12 = load %struct.pca953x_chip*, %struct.pca953x_chip** %5, align 8
  %13 = getelementptr inbounds %struct.pca953x_chip, %struct.pca953x_chip* %12, i32 0, i32 2
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @pca953x_recalc_addr(%struct.pca953x_chip* %11, i32 %16, i32 %17, i32 1, i32 0)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* @BANK_SZ, align 4
  %21 = urem i32 %19, %20
  %22 = call i32 @BIT(i32 %21)
  store i32 %22, i32* %7, align 4
  %23 = load %struct.pca953x_chip*, %struct.pca953x_chip** %5, align 8
  %24 = getelementptr inbounds %struct.pca953x_chip, %struct.pca953x_chip* %23, i32 0, i32 0
  %25 = call i32 @mutex_lock(i32* %24)
  %26 = load %struct.pca953x_chip*, %struct.pca953x_chip** %5, align 8
  %27 = getelementptr inbounds %struct.pca953x_chip, %struct.pca953x_chip* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @regmap_write_bits(i32 %28, i32 %29, i32 %30, i32 %31)
  store i32 %32, i32* %8, align 4
  %33 = load %struct.pca953x_chip*, %struct.pca953x_chip** %5, align 8
  %34 = getelementptr inbounds %struct.pca953x_chip, %struct.pca953x_chip* %33, i32 0, i32 0
  %35 = call i32 @mutex_unlock(i32* %34)
  %36 = load i32, i32* %8, align 4
  ret i32 %36
}

declare dso_local %struct.pca953x_chip* @gpiochip_get_data(%struct.gpio_chip*) #1

declare dso_local i32 @pca953x_recalc_addr(%struct.pca953x_chip*, i32, i32, i32, i32) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @regmap_write_bits(i32, i32, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
